[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Extensions/Voxelorama/Tools/Depth.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Tools/Draw.tscn" type="PackedScene" id=3]

[node name="DepthTool" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Depth" parent="." index="4" instance=ExtResource( 2 )]
margin_top = 62.0
margin_right = 116.0
margin_bottom = 86.0
min_value = 1.0
max_value = 25.0
step = 0.5
value = 1.0
allow_greater = true
prefix = "Depth:"

[node name="FillInside" type="CheckBox" parent="." index="5"]
margin_top = 90.0
margin_right = 116.0
margin_bottom = 114.0
text = "Fill Inside"

[node name="Label2" type="Label" parent="." index="6"]
margin_top = 118.0
margin_right = 116.0
margin_bottom = 183.0
size_flags_vertical = 6
text = "Please note that Undo/Redo will not work for this tool"
align = 1
autowrap = true

[connection signal="value_changed" from="Depth" to="." method="_on_Depth_value_changed"]
[connection signal="toggled" from="FillInside" to="." method="_on_FillInside_toggled"]
